# network-security-ml-project

./: .gitignore  LICENSE  main.py  pyproject.toml
database/: push_data.py  test_mongodb.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/training_pipeline/: __init__.py
src/entity/: config_entity.py
src/exception/: exception.py
src/pipelines/: training_pipeline.py
src/utils/main_utils/: utils.py
src/utils/ml_utils/metric/: classification_metric.py
src/utils/ml_utils/model/: estimator.py
